clusters/contabo-mkt/tenants/aaa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tenant-ingress
  namespace: tenant-aaa
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: aaa.omani.rest
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cal-com-x-tenant-aaa-x-vcluster
                port:
                  number: 80
          - path: /cal-com
            pathType: Prefix
            backend:
              service:
                name: cal-com-x-tenant-aaa-x-vcluster
                port:
                  number: 80
          - path: /invoiceshelf
            pathType: Prefix
            backend:
              service:
                name: invoiceshelf-x-tenant-aaa-x-vcluster
                port:
                  number: 80
          - path: /listmonk
            pathType: Prefix
            backend:
              service:
                name: listmonk-x-tenant-aaa-x-vcluster
                port:
                  number: 80
          - path: /nextcloud
            pathType: Prefix
            backend:
              service:
                name: nextcloud-x-tenant-aaa-x-vcluster
                port:
                  number: 80
  tls:
    - hosts:
        - aaa.omani.rest
      secretName: tenant-aaa-tls
